tests/NormalTests/paczka1/fuzzy1/33347523.err
Error in line 1: sN0Kkc A937 54,5
Error in line 6: afA8o5SJ9Qq S739 55,6
Error in line 26: sN0Kkc S243 97,0
Error in line 24: S243 S739 51,6
